# ClinicalClaw

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  TODO.md  pyproject.toml
clinicalclaw/: __init__.py  models.py  query_enhancement.py
clinicalclaw/agentic/: __init__.py  state.py  workflow.py
clinicalclaw/correction/: __init__.py  output_auditor.py
clinicalclaw/data/: __init__.py  pubmedqa.py
clinicalclaw/evaluation/: __init__.py  metrics.py  retrieval_metrics.py  safety_metrics.py
clinicalclaw/generation/: __init__.py  answer_generator.py
clinicalclaw/llm/: __init__.py  deterministic_provider.py  mock_provider.py
clinicalclaw/pipeline/: __init__.py  demo.py  router.py  workflow.py
clinicalclaw/retrieval/: __init__.py  adaptive.py  bm25.py  dense.py  hybrid.py  reranker.py  tokenization.py
clinicalclaw/safety/: __init__.py  policy.py
clinicalclaw/verification/: __init__.py  claims.py  verifier.py
configs/: default.yaml  routing_prompts.json  routing_rules.json
data/: adaptive_retrieval_eval.jsonl  pubmedqa_tiny.jsonl
examples/: agentic_demo.py  demo.py  evaluate_adaptive_retrieval.py  research_plan_demo.py  retrieval_experiment.py
reports/: README.md  clinicalclaw_report.md  project_summary.md  research_plan_alignment.md
tests/: conftest.py  test_adaptive_retrieval.py  test_agentic_graph.py  test_agentic_state.py  test_agentic_versions.py  test_data_loader.py  test_evaluation_metrics.py  test_output_auditor.py  test_query_planning.py  test_retrieval.py  test_safety.py  test_verification.py
