[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinicalclaw"
version = "0.1.0"
description = "ClinicalClaw: a beginner-friendly clinical agentic RAG scaffold with evidence verification."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ClinicalClaw Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clinicalclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
